--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,32 @@ h1 {
 }
 
 .container {
-  padding: 10px;
+  padding: 30px 30px;
   border: 1px solid black;
+  width: 500px;
+  border: 1px solid black;
+}
+
+.disclaimer {
+  margin-left: 10px;
+}
+
+label {
+  font-size: 15px;
+}
+
+select {
+  width: 69px;
+  height: 34px;
+  margin-left: 10px;
+  font-size: 15px;
+  box-shadow: 1px 1px 4px aliceblue;
+}
+
+input {
+    width: 80px;
+    height: 30px;
+    margin-left: 10px;
+    box-shadow: 1px -3px 6px aliceblue;
+    padding: 0px 6px;
 }
